--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,110 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+  <body class="page-body">
+    <header class="header">
+       <img src="" width="" height="" alt="Логотип Седона">
+      </header>
+    <nav class="main-nav">
+      <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-nav__center">
+        <ul class="main-nav__list">
+          <li class="site-list__item site-list__item--active">
+            <a href="#">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Фото и видео</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Форма отзыва</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main class="main-wrapper">
+      <div class="welcome-sedona">
+        <img src="" width="" height="" alt="Добро пожаловать в Седону!">
+      </div>
+      <section class="advantages-wrapper">
+        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего</h2>
+        <p>Рассмотрим 5 причин по которым Седона, лучше чем Гранд-Каньон</p>
+        <ul class="advantages-list">
+          <li class="advantages-list__item">
+              <h3 class="advantages-title">Настоящий <br>городок</h3>
+              <p class="advantages-number">-№1-</p>
+              <p class="advantages-description">Седона - не аттракцион для туристов,там течёт своя жизнь</p>
+              <img src="" alt="каньон в Седоне" width="" height="">
+          </li>
+          <li class="advantages-list__item">
+              <img src="" alt="жильё" width="" height="">
+            <h3 advantages-title>Жильё</h3>
+            <p  class="advantages-description">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
+          </li>
+          <li class="advantages-list__item">
+              <img src="" alt="еда" width="" height="">
+            <h3 class="advantages-title">Еда</h3>
+            <p class="advantages-description" >Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages-list__item">
+              <img src="" alt="сувениры" width="" height="">
+            <h3 class="advantages-title">Сувениры</h3>
+            <p class="advantages-description">Не только китайского,но и местного производства</p>
+          </li>
+          <li class="advantages-list__item">
+              <img src="" alt="мост дьявола" width="" height="">
+              <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
+              <p class="advantages-number">-№2-</p>
+              <p class="advantages-description">да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </li>
+          <li class="advantages-list__item">
+              <h3 class="advantages-title">Небольшая <br>площадь</h3>
+              <p class="advantages-number">-№3-</p>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-list__item">
+              <h3 class="advantages-title">Красивая <br>дорога</h3>
+              <p class="advantages-number">-№4-</p>
+              <p class="advantages-description">Ехать в Седону и Лас-Вегаса совсем не скучно</p>
+          </li>
+          <li class="advantages-list__item">
+              <h3 class="advantages-title">Мало <br> туристов</h3>
+              <p class="advantages-number">-№5-</p>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+      <footer class="footer">
+        <section class="contacts">
+          <h2 class="visually-hidden">Контакты</h2>
+          <div class="footer-wrapper">
+            <div class="telephone-number">
+              <p>#visitsedona</p>
+              <a class="contacts-phone" href="tel:+74956660166"> Тел: +7(495) 666-01-66</a>
+            </div>
+            <ul class="contacts-list">
+              <li class="contacts-item">
+                 <a href="#" aria-label="твиттер"><img src=""  width="" height="" alt=""></a>
+              </li>
+              <li class="contacts-item">
+                <a href="#" aria-label="фейсбук"><img src=""  width="" height="" alt=""></a>
+              </li>
+              <li class="contacts-item">
+                <a href="#" aria-label="ютуб"><img src=""  width="" height="" alt=""></a>
+              </li>
+            </ul>
+            <div class="website">
+              <p>Website by</p>
+              <img src="" width="" height="" alt="Логотип HTML Academy">
+            </div>
+          </div>
+        </section>
+      </footer>
   </body>
 </html>
+
