verstka pervoi stranicy

--- a/source/form.html
+++ b/source/form.html
@@ -1,6 +1,6 @@
 <section class="comment">
   <h1 class="comment-title">Оставьте свой отзыв</h1>
-  <p class="comment-title--item">
+  <p class="comment-title__item">
     Помогите нашим отелям стаь лучше!
     Оставьте отзыв о них, а также о
     посещённых вами
@@ -9,16 +9,16 @@
 </section>
 <section class="personal-data">
   <h2 class="personality">Представьтесь:</h2>
-  <form class="personal-data--form">
-    <p class="personal-data--item">
+  <form class="personal-data__form">
+    <p class="personal-data__item">
       <label for="data-name">Имя</label>
       <input id="data-name" type="text" name="name" placeholder="Пётр">
     </p>
-    <p class="personal-data--item">
+    <p class="personal-data__item">
       <label for="surname">Фамилия</label>
       <input id="surname" type="text" name="surname" placeholder="Иванов">
     </p>
-    <p class="personal-data--item">
+    <p class="personal-data__item">
       <label for="patronymic">Отчество</label>
       <input id="patronymic" type="text" name="patronymic" placeholder="Александрович">
     </p>
