--- a/source/form.html
+++ b/source/form.html
@@ -1,82 +1,93 @@
-<section class="comment">
-  <h1 class="comment-title">Оставьте свой отзыв</h1>
-  <p class="comment-title__item">
-    Помогите нашим отелям стаь лучше!
-    Оставьте отзыв о них, а также о
-    посещённых вами
-    достопримечательнотях
-  </p>
-</section>
-<section class="personal-data">
-  <h2 class="personality">Представьтесь:</h2>
-  <form class="personal-data__form">
-    <p class="personal-data__item">
-      <label for="data-name">Имя</label>
-      <input id="data-name" type="text" name="name" placeholder="Пётр">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <section class="comment">
+    <h1 class="comment-title">Оставьте свой отзыв</h1>
+    <p class="comment-title__item">
+      Помогите нашим отелям стаь лучше!
+      Оставьте отзыв о них, а также о
+      посещённых вами
+      достопримечательнотях
     </p>
-    <p class="personal-data__item">
-      <label for="surname">Фамилия</label>
-      <input id="surname" type="text" name="surname" placeholder="Иванов">
-    </p>
-    <p class="personal-data__item">
-      <label for="patronymic">Отчество</label>
-      <input id="patronymic" type="text" name="patronymic" placeholder="Александрович">
-    </p>
-  </form>
-</section>
-<section class="contacts-info">
-  <h2>Контактная информация</h2>
-  <form>
-    <label> Контактный телефон:*
-      <input id="contact-number" type="text" name="contact-number" placeholder="Введите телефон">
-      <img src="">
-    </label>
-    <label> Электронная почта:*
-      <input id="email" type="text" name="email-adress" placeholder="Введите e-mail">
-      <img src="">
-    </label>
-  </form>
-</section>
-<section class="">
-  <h2>Ваше общее впечатление:</h2>
-  <form class="">
-    <label class="container">Скорее положительное
-      <input type="checkbox" checked="checked">
-      <span class="checkmark"></span>
-    </label>
-    <label class="container">Скорее отрицательное
-      <input type="checkbox">
-      <span class="checkmark"></span>
-    </label>
-    <label class="container">Затрудняюсь ответить
-      <input type="checkbox">
-      <span class="checkmark"></span>
-    </label>
-  </form>
-</section>
-<section class="searching-form" style="display: none;">
-  <h2>Посещённые достопримечательности</h2>
-  <form class="reserve">
-    <label class="container">Мост дьявола
-      <input type="checkbox" checked="checked">
-      <span class="checkmark"></span>
-    </label>
-    <label class="container">Гора-колокол
-      <input type="checkbox" checked="checked">
-      <span class="checkmark"></span>
-    </label>
-    <label class="container">Слайд парк
-      <input type="checkbox" checked="checked">
-      <span class="checkmark"></span>
-    </label>
-    <label class="container">Красные скалы
-      <input type="checkbox">
-      <span class="checkmark"></span>
-    </label>
-  </form>
-</section>
-<section>
-  <h2>Опишите подробно свои эмоции:</h2>
-  <textarea name="comment">Опишите подробно все свои восторги</textarea>
-  <button>Отправить отзыв</button>
-</section>
+  </section>
+  <section class="personal-data">
+    <h2 class="personality">Представьтесь:</h2>
+    <form class="personal-data__form">
+      <p class="personal-data__item">
+        <label for="data-name">Имя</label>
+        <input id="data-name" type="text" name="name" placeholder="Пётр">
+      </p>
+      <p class="personal-data__item">
+        <label for="surname">Фамилия</label>
+        <input id="surname" type="text" name="surname" placeholder="Иванов">
+      </p>
+      <p class="personal-data__item">
+        <label for="patronymic">Отчество</label>
+        <input id="patronymic" type="text" name="patronymic" placeholder="Александрович">
+      </p>
+    </form>
+  </section>
+  <section class="contacts-info">
+    <h2>Контактная информация</h2>
+    <form>
+      <label> Контактный телефон:*
+        <input id="contact-number" type="text" name="contact-number" placeholder="Введите телефон">
+        <img src="">
+      </label>
+      <label> Электронная почта:*
+        <input id="email" type="text" name="email-adress" placeholder="Введите e-mail">
+        <img src="">
+      </label>
+    </form>
+  </section>
+  <section class="">
+    <h2>Ваше общее впечатление:</h2>
+    <form class="">
+      <label class="container">Скорее положительное
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+      </label>
+      <label class="container">Скорее отрицательное
+        <input type="checkbox">
+        <span class="checkmark"></span>
+      </label>
+      <label class="container">Затрудняюсь ответить
+        <input type="checkbox">
+        <span class="checkmark"></span>
+      </label>
+    </form>
+  </section>
+  <section class="searching-form" style="display: none;">
+    <h2>Посещённые достопримечательности</h2>
+    <form class="reserve">
+      <label class="container">Мост дьявола
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+      </label>
+      <label class="container">Гора-колокол
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+      </label>
+      <label class="container">Слайд парк
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+      </label>
+      <label class="container">Красные скалы
+        <input type="checkbox">
+        <span class="checkmark"></span>
+      </label>
+    </form>
+  </section>
+  <section>
+    <h2>Опишите подробно свои эмоции:</h2>
+    <textarea name="comment">Опишите подробно все свои восторги</textarea>
+    <button>Отправить отзыв</button>
+  </section>
+
+</body>
+</html>
