--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,29 +1,40 @@
-<section>
-  <h2>Фото и видео:</h2>
-  <p>Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-</section>
-<section>
-  <img src="" width="260" height="180" alt="Просторы">
-  <h3>Неродные просторы</h3>
-  <p>Автор фото: Борис</p>
-</section>
-<section>
-  <img src="" width="260" height="180" alt="Растительность">
-  <h3>Местная растительность</h3>
-  <p>Автор фото: Сергей</p>
-</section>
-<section>
-  <img src="" width="260" height="180" alt="Север">
-  <h3>Дорога на север</h3>
-  <p>Автор фото: Пётр</p>
-</section>
-<section>
-  <img src="" width="260" height="180" alt="Мост дьявола">
-  <h3>Мост дьявола</h3>
-  <p>Автор фото: Антон</p>
-</section>
-<section>
-  <h2>Всё ещё сомневаетесь?</h2>
-  <p>Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз</p>
-  <video src=""></video>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <section class="photo">
+    <h2 class="photo-item">Фото и видео:</h2>
+    <p class="photo-item">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+  </section>
+  <section class="photo">
+    <img src="" width="260" height="180" alt="Просторы">
+    <h3 class="photo-description">Неродные просторы</h3>
+    <p class="photo-author">Автор фото: Борис</p>
+  </section>
+  <section class="photo">
+    <img src="" width="260" height="180" alt="Растительность">
+    <h3 class="photo-description">Местная растительность</h3>
+    <p class="photo-author">Автор фото: Сергей</p>
+  </section>
+  <section class="photo">
+    <img src="" width="260" height="180" alt="Север">
+    <h3 class="photo-description">Дорога на север</h3>
+    <p class="photo-author">Автор фото: Пётр</p>
+  </section>
+  <section class="photo">
+    <img src="" width="260" height="180" alt="Мост дьявола">
+    <h3 class="photo-description">Мост дьявола</h3>
+    <p class="photo-author">Автор фото: Антон</p>
+  </section>
+  <section class="video">
+    <h2 class="video-item" >Всё ещё сомневаетесь?</h2>
+    <p class="video-presentation">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз</p>
+    <video src=""></video>
+  </section>
+
+</body>
+</html>
