--- a/source/index.html
+++ b/source/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page-body">
   <header class="header">
     <img src="" width="260" height="180" alt="Логотип Седона">
-  </header>
   <nav class="main-nav">
     <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     <div class="main-nav__center">
@@ -29,6 +29,7 @@
       </ul>
     </div>
   </nav>
+</header>
   <main class="main-wrapper">
     <div class="welcome-sedona">
       <img src="" width="260" height="180" alt="Добро пожаловать в Седону!">
