--- a/source/index.html
+++ b/source/index.html
@@ -4,16 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body class="page-body">
   <header class="header">
-    <img src="" width="260" height="180" alt="Логотип Седона">
-  <nav class="main-nav">
-    <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-    <div class="main-nav__center">
-      <ul class="main-nav__list">
+    <img class="logo" src="img/logotype-mobile.svg.svg" width="102" height="84" alt="Логотип Седона">
+  <nav class="site-list">
+    <button class="site-list__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+    <div class="sitet-list__center">
+      <ul class="site-list">
         <li class="site-list__item site-list__item--active">
           <a class="" href="#">Главная</a>
         </li>
@@ -32,7 +34,7 @@
 </header>
   <main class="main-wrapper">
     <div class="welcome-sedona">
-      <img src="" width="260" height="180" alt="Добро пожаловать в Седону!">
+      <img class="welcome-sedona" src="img/back-mobile.jpg.jpg" width="901" height="389" alt="Добро пожаловать в Седону!">
     </div>
     <section class="advantages">
       <div class="advantages-wrapper">
@@ -40,10 +42,10 @@
         <p class="advantages-subtitle">Рассмотрим 5 причин по которым Седона, лучше чем Гранд-Каньон</p>
         <ul class="advantages-list">
           <li class="advantages-list__item">
-            <h3 class="advantages-title"><span>Настоящий</span>городок</h3>
+            <h3 class="advantages-title__item">Настоящий</br>городок</h3>
             <p class="advantages-number">-№1-</p>
             <p class="advantages-description">Седона - не аттракцион для туристов,там течёт своя жизнь</p>
-            <img src="" alt="каньон в Седоне" width="" height="">
+            <img src="img/photo-city@1x 1.jpg" alt="каньон в Седоне" width="520px" height="260px">
           </li>
           <li class="advantages-list__item">
             <img src="" alt="жильё" width="260" height="180">
@@ -60,8 +62,8 @@
             <h3 class="advantages-title">Сувениры</h3>
             <p class="advantages-description">Не только китайского,но и местного производства</p>
           </li>
-          <li class="advantages-list__item">
-            <img src="" alt="мост дьявола" width="" height="">
+          <li class="advantages-title__item">
+            <img src="img/photo-bridge@1x 1.jpg" alt="мост дьявола" width="520px" height="260px">
             <h3 class="advantages-title"><span>Там есть</span>мост дьявола</h3>
             <p class="advantages-number">-№2-</p>
             <p class="advantages-description">да, по нему можно пройти! Если конечно вы осмелитесь</p>
