--- a/source/index.html
+++ b/source/index.html
@@ -64,22 +64,22 @@
           </li>
           <li class="advantages-title__item">
             <img src="img/photo-bridge@1x 1.jpg" alt="мост дьявола" width="520px" height="260px">
-            <h3 class="advantages-title"><span>Там есть</span>мост дьявола</h3>
+            <h3 class="advantages-title">Там есть</br>мост дьявола</h3>
             <p class="advantages-number">-№2-</p>
             <p class="advantages-description">да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
           <li class="advantages-list__item">
-            <h3 class="advantages-title"><span>Небольшая</span>площадь</h3>
+            <h3 class="advantages-title">Небольшая</br>площадь</h3>
             <p class="advantages-number">-№3-</p>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-list__item">
-            <h3 class="advantages-title"><span>Красивая</span>дорога</h3>
+            <h3 class="advantages-title">Красивая</br>дорога</h3>
             <p class="advantages-number">-№4-</p>
             <p class="advantages-description">Ехать в Седону и Лас-Вегаса совсем не скучно</p>
           </li>
           <li class="advantages-list__item">
-            <h3 class="advantages-title"><span>Мало</span>туристов</h3>
+            <h3 class="advantages-title">Мало</br>туристов</h3>
             <p class="advantages-number">-№5-</p>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
