--- a/source/form.html
+++ b/source/form.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <section class="comment">
-    <h1 class="comment-title">Оставьте свой отзыв</h1>
-    <p class="comment-title__item">
+    <h1 class="comment__title">Оставьте свой отзыв</h1>
+    <p class="comment__description">
       Помогите нашим отелям стаь лучше!
       Оставьте отзыв о них, а также о
       посещённых вами
@@ -17,25 +17,23 @@
     </p>
   </section>
   <section class="personal-data">
-    <h2 class="personality">Представьтесь:</h2>
-    <form class="personal-data__form">
-      <p class="personal-data__item">
+    <form>
+    <h2 class="personal-data__personality">Представьтесь:</h2>
+      <div class="personal-data__item">
         <label for="data-name">Имя</label>
         <input id="data-name" type="text" name="name" placeholder="Пётр">
-      </p>
-      <p class="personal-data__item">
+      </div>
+      <div class="personal-data__item">
         <label for="surname">Фамилия</label>
         <input id="surname" type="text" name="surname" placeholder="Иванов">
-      </p>
-      <p class="personal-data__item">
+      </div>
+      <div class="personal-data__item">
         <label for="patronymic">Отчество</label>
         <input id="patronymic" type="text" name="patronymic" placeholder="Александрович">
-      </p>
-    </form>
+      </div>>
   </section>
   <section class="contacts-info">
-    <h2>Контактная информация</h2>
-    <form>
+    <h2 class="contacts-info__item">Контактная информация</h2>
       <label> Контактный телефон:*
         <input id="contact-number" type="text" name="contact-number" placeholder="Введите телефон">
         <img src="">
@@ -44,11 +42,9 @@
         <input id="email" type="text" name="email-adress" placeholder="Введите e-mail">
         <img src="">
       </label>
-    </form>
   </section>
-  <section class="">
-    <h2>Ваше общее впечатление:</h2>
-    <form class="">
+  <section class="general-imression">
+    <h2 class="general-impression__item">Ваше общее впечатление:</h2>
       <label class="container">Скорее положительное
         <input type="checkbox" checked="checked">
         <span class="checkmark"></span>
@@ -61,11 +57,9 @@
         <input type="checkbox">
         <span class="checkmark"></span>
       </label>
-    </form>
   </section>
-  <section class="searching-form" style="display: none;">
+  <section class="places-visited" style="display: none;">
     <h2>Посещённые достопримечательности</h2>
-    <form class="reserve">
       <label class="container">Мост дьявола
         <input type="checkbox" checked="checked">
         <span class="checkmark"></span>
@@ -84,10 +78,10 @@
       </label>
     </form>
   </section>
-  <section>
-    <h2>Опишите подробно свои эмоции:</h2>
+  <section class="emotions-description">
+    <h2 class="emotions-description__item">Опишите подробно свои эмоции:</h2>
     <textarea name="comment">Опишите подробно все свои восторги</textarea>
-    <button>Отправить отзыв</button>
+    <button class="btn" type="submit">Отправить отзыв</button>
   </section>
 
 </body>
